# gnome-hearts

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  control  control.in  copyright  gnome-hearts.desktop.in  rules  watch
help/: Makefile.am  Makefile.in
help/C/: Makefile.am  Makefile.in  gnome-hearts-C.omf  gnome-hearts.xml
help/de/: Makefile.am  Makefile.in  gnome-hearts-de.omf  gnome-hearts.xml
help/en_GB/: Makefile.am  Makefile.in  gnome-hearts.xml
help/es/: Makefile.am  Makefile.in  gnome-hearts.xml
help/it/: Makefile.am  Makefile.in  gnome-hearts-it.omf  gnome-hearts.xml
help/nl/: Makefile.am  Makefile.in  fdl-appendix.xml  gnome-hearts-nl.omf  gnome-hearts.xml  legal.xml
help/pl/: Makefile.am  Makefile.in  gnome-hearts-pl.omf  gnome-hearts.xml
help/pt/: Makefile.am  Makefile.in  gnome-hearts-pt.omf  gnome-hearts.xml
help/tl/: Makefile.am  Makefile.in  gnome-hearts-tl.omf  gnome-hearts.xml
help/zh_CN/: Makefile.am  Makefile.in  gnome-hearts-zh_CN.omf  gnome-hearts.xml
man/: Makefile.am  Makefile.in  gnome-hearts.6
pixmaps/: Makefile.am  Makefile.in
po/: LINGUAS  POTFILES.in  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  hu.po  id.po  it.po  ml.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  tl.po  zh_CN.po
scripts/: Makefile.am  Makefile.in  definitions.py  hearts.py  hearts.py.in  player.py  stock_ai.py
scripts/players/: Makefile.am  Makefile.in  jake.py  john.py  ling.py  luis.py  mike.py  pauline.py  peter.py
src/: Makefile.am  Makefile.in  background.c  background.h  cards-image.c  cards-image.h  cards.c  cards.h  cfg.c  cfg.h  events.c  events.h  gettext.h  gnome-hearts.cfg  gnome-hearts.cfg.in  gnome-hearts.glade  hearts.c  hearts.h  player-api.c  player-api.h  player.c  player.h  preimage.c  preimage.h  ui.c  ui.h
