## Process this file with automake to produce Makefile.in

icondir = $(datadir)/pixmaps
icon_DATA = gnome-hearts.png

gladedir = $(datadir)/gnome-hearts
glade_DATA = gnome-hearts.png \
	     gnome-hearts-small.png

pixmapdir = $(datadir)/pixmaps/gnome-hearts
pixmap_DATA = baize.png

cardsdir = $(datadir)/pixmaps/gnome-hearts/cards
cards_DATA = dondorf.svg

EXTRA_DIST = $(icon_DATA) $(glade_DATA) $(pixmap_DATA) $(cards_DATA)
